--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,13 @@
 version: "3.8"
 services:
     mongodb:
-        image : mongo
+        image: mongo
         container_name: mongodb
         environment:
             - PUID=1000
             - PGID=1000
         volumes:
             - ~/mongodb/database:/data/db
+            - ./script.sh:/docker-entrypoint-initdb.d/script.sh
         ports:
             - 27017:27017
