--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -14,6 +14,8 @@ services:
             - '5000:5000'
         depends_on:
             - "mongodb"
+        labels:
+            kompose.service.type: LoadBalancer
         networks:
             f-network:
                 ipv4_address: 172.20.0.5
